fix videos not stretching to container

--- a/src/components/attachment/attachment.scss
+++ b/src/components/attachment/attachment.scss
@@ -84,8 +84,8 @@
   & .video-container {
     & .flash,
     & video {
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: 100%;
       object-fit: contain;
       align-self: center;
     }
